--- a/treatment_app/templates/treatment_app/base.html
+++ b/treatment_app/templates/treatment_app/base.html
@@ -59,12 +59,28 @@
                 </ul>
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <span class="nav-link">שלום, {{ user.get_full_name|default:user.username }}</span>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-user"></i> {{ user.username }}
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                                <li>
+                                    <form method="post" action="{% url 'logout' %}" class="dropdown-item">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-link p-0">
+                                            <i class="fas fa-sign-out-alt"></i> Logout
+                                        </button>
+                                    </form>
+                                </li>
+                            </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'admin:logout' %}">התנתק</a>
-                        </li>
+                        {% if user.is_superuser %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'treatment_app:therapist-list' %}">
+                                    <i class="fas fa-user-md"></i> ניהול מטפלים
+                                </a>
+                            </li>
+                        {% endif %}
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'admin:login' %}">התחבר</a>
