--- a/treatment_app/templates/treatment_app/treatment_form.html
+++ b/treatment_app/templates/treatment_app/treatment_form.html
@@ -15,13 +15,9 @@
             </h2>
         </div>
         <div class="card-body">
-            <form method="post">
+            <form method="post" class="form-horizontal">
                 {% csrf_token %}
-                {{ form|crispy }}
-                <button type="submit" class="btn btn-primary">{% trans "שמור" %}</button>
-                <a href="{% url 'treatment_app:treatment-list' %}" class="btn btn-secondary">
-                    {% trans "ביטול" %}
-                </a>
+                {% crispy form %}
             </form>
         </div>
     </div>
