--- a/treatment_app/templates/treatment_app/child_form.html
+++ b/treatment_app/templates/treatment_app/child_form.html
@@ -124,9 +124,15 @@
                     </div>
 
                     <div class="d-flex justify-content-between mt-3">
-                        <a href="{% url 'treatment_app:family-detail' family.id %}" class="btn btn-secondary">
-                            <i class="fas fa-arrow-right"></i> חזרה למשפחה
-                        </a>
+                        {% if family %}
+                            <a href="{% url 'treatment_app:family-detail' family.id %}" class="btn btn-secondary">
+                                <i class="fas fa-arrow-right"></i> חזרה למשפחה
+                            </a>
+                        {% else %}
+                            <a href="{% url 'treatment_app:child-list' %}" class="btn btn-secondary">
+                                <i class="fas fa-arrow-right"></i> חזרה לרשימת ילדים
+                            </a>
+                        {% endif %}
                         <button type="submit" class="btn btn-primary">
                             <i class="fas fa-save"></i> שמור
                         </button>
