--- a/treatment_app/templates/treatment_app/child_detail.html
+++ b/treatment_app/templates/treatment_app/child_detail.html
@@ -44,6 +44,24 @@
                         <p>{{ child.notes }}</p>
                     </div>
                     {% endif %}
+                    <div class="card-body">
+                        <div class="row">
+                            {% if therapist %}
+                                <div class="col-md-6">
+                                    <h5>מטפל</h5>
+                                    <p>
+                                        {% if child.therapist and child.therapist == therapist %}
+                                            מטפל אישי: {{ therapist.full_name }}
+                                        {% elif child.family and child.family.therapist == therapist %}
+                                            מטפל המשפחה: {{ therapist.full_name }}
+                                        {% else %}
+                                            {{ therapist.full_name }}
+                                        {% endif %}
+                                    </p>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
                 </div>
             </div>
 
