--- a/treatment_app/static/treatment_app/css/custom.css
+++ b/treatment_app/static/treatment_app/css/custom.css
@@ -152,3 +152,10 @@ body {
     margin-left: 10px;
     font-size: 1.5rem;
 }
+
+/* Remove default search input clear button */
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    appearance: none;
+    display: none;
+}
